--- a/ASSIGNMENT2/index.html
+++ b/ASSIGNMENT2/index.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <header class="navBar">
-      <nav class="navMenu">
+        <div class="heading"><h1>Paras</h1></div>
         <ul class="navItems">
+          
           <li><a href="#">Works</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
