some images added

--- a/ASSIGNMENT2/index.html
+++ b/ASSIGNMENT2/index.html
@@ -93,7 +93,7 @@
       <div class="workContainer">
         <p class="workContainerTitle">Featured works</p>
         <a href="#" class="workCard">
-          <img class="img2" />
+          <img class="img2" src="./images/dashboard.png" alt="dashboardimg"/>
           <div class="workInfo">
             <h1 class="workCardHeading">Designing Dashboards</h1>
             <div class="yearCategory">
@@ -110,36 +110,32 @@
           </div>
         </a>
         <a href="#" class="workCard">
-          <img class="img2" />
+          <img class="img2" src="./images/illustration.png" alt="illusImg"/>
           <div class="workInfo">
-            <h1 class="workCardHeading">Designing Dashboards</h1>
+            <h1 class="workCardHeading">Vibrant Portraits of 2020</h1>
             <div class="yearCategory">
               <ul class="categoryItem">
-                <li class="item1">2020</li>
-                <li class="item2">Dashboard</li>
+                <li class="item1">2018</li>
+                <li class="item2">Illustration</li>
               </ul>
             </div>
             <p class="workCardInfo">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
           </div>
         </a>
         <a href="#" class="workCard">
-          <img class="img2" />
+          <img class="img2" src="./images/typo.png" alt="typoImg"/>
           <div class="workInfo">
-            <h1 class="workCardHeading">Designing Dashboards</h1>
+            <h1 class="workCardHeading">36 Days of Malayalam type</h1>
             <div class="yearCategory">
               <ul class="categoryItem">
-                <li class="item1">2020</li>
-                <li class="item2">Dashboard</li>
+                <li class="item1">2018</li>
+                <li class="item2">Typography</li>
               </ul>
             </div>
             <p class="workCardInfo">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
           </div>
         </a>
